internal/provisioner/plain/manifests/06_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rukpak-system
  name: plain-provisioner
  labels:
    app: plain-provisioner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plain-provisioner
  template:
    metadata:
      labels:
        app: plain-provisioner
    spec:
      serviceAccountName: plain-provisioner-admin
      containers:
        - name: plain-provisioner
          image: quay.io/operator-framework/plain-provisioner:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
