internal/provisioner/plain/manifests/07_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rukpak-system
  name: plain-provisioner
  labels:
    app: plain-provisioner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plain-provisioner
  template:
    metadata:
      labels:
        app: plain-provisioner
    spec:
      serviceAccountName: plain-provisioner-admin
      containers:
        - name: plain-provisioner
          image: quay.io/operator-framework/plain-provisioner:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
            - containerPort: 9443
              name: webhooks
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: rukpak-webhook-certificate
